# Swerve_ws

./: .gitattributes  .gitignore  .gitmodules  README.md  Rover_Nano_Swerve.code-workspace  aarch64_build.sh  aarch64_root.tar.xz  aarch64toolchain.cmake  amd64_build.sh  build.sh  clean.sh  cross_compile_build.sh  cross_compile_setup.sh  setup_environment.sh
.catkin_tools/profiles/: profiles.yaml
.catkin_tools/profiles/aarch64/: build.yaml  config.yaml  devel_collisions.txt
.catkin_tools/profiles/amd64/: build.yaml  config.yaml  devel_collisions.txt
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  setup.sh
devel/include/base_trajectory/: Coefs.h  GenerateSpline.h  GenerateSplineRequest.h  GenerateSplineResponse.h
devel/include/frc_msgs/: CubeState.h  JoystickState.h  MatchSpecificData.h  PCMState.h  PDPData.h  RobotControllerCANData.h  RobotControllerData.h
devel/include/imu_zero/: ImuZeroAngle.h  ImuZeroAngleRequest.h  ImuZeroAngleResponse.h
devel/include/navx_offset_controller/: NavXSrv.h  NavXSrvRequest.h  NavXSrvResponse.h
devel/include/navx_publisher/: stampedUInt64.h
devel/include/ros_control_boilerplate/: AutoMode.h  AutoModeStatus.h  LineBreakSensors.h  LineBreakSensorsRequest.h  LineBreakSensorsResponse.h  set_limit_switch.h  set_limit_switchRequest.h  set_limit_switchResponse.h
devel/include/talon_controllers/: PidfSlot.h  PidfSlotRequest.h  PidfSlotResponse.h  TalonConfigConfig.h
devel/include/talon_state_msgs/: CustomProfileStatus.h  TalonConfig.h  TalonState.h
devel/include/talon_swerve_drive_controller/: MotionProfile.h  MotionProfileRequest.h  MotionProfileResponse.h  SetXY.h  SetXYRequest.h  SetXYResponse.h
devel/lib/base_trajectory/: base_trajectory_node  driver_node
devel/lib/ddynamic_reconfigure/: ddynamic_reconfigure_auto_update_test  fake_dynamic_reconfigure_server  test_bool_dynamic_reconfigure_server
devel/lib/imu_zero/: imu_zero_node
devel/lib/joint_trajectory_controller/: rrbot  rrbot_wrapping
devel/lib/navx_publisher/: imu_to_rpy  navx_publisher_node
devel/lib/pkgconfig/: base_trajectory.pc  control_toolbox.pc  controller_node.pc  ddynamic_reconfigure.pc  dynamic_reconfigure_wrapper.pc  forward_command_controller.pc  frc_interfaces.pc  frc_msgs.pc  frc_state_controllers.pc  frcrobot_description.pc  frcrobot_gazebo.pc  imu_sensor_controller.pc  imu_zero.pc  joint_state_controller.pc  joint_trajectory_controller.pc  navx_offset_controller.pc  navx_publisher.pc  position_controllers.pc  realsense2_camera.pc  realsense2_description.pc  realtime_tools.pc  ros_control_boilerplate.pc  state_handle.pc  static_controller.pc  talon_controllers.pc  talon_interface.pc  talon_state_controller.pc  talon_state_msgs.pc  talon_swerve_drive_controller.pc  velocity_controllers.pc
devel/lib/ros_control_boilerplate/: q_to_rpy
devel/lib/talon_swerve_drive_controller/: dump_offsets_service  zero_wheel_service
devel/share/base_trajectory/cmake/: base_trajectory-msg-extras.cmake  base_trajectory-msg-paths.cmake  base_trajectoryConfig.cmake
devel/share/control_toolbox/cmake/: control_toolbox-msg-extras.cmake  control_toolboxConfig.cmake
devel/share/controller_node/cmake/: controller_nodeConfig.cmake
devel/share/ddynamic_reconfigure/cmake/: ddynamic_reconfigureConfig.cmake
devel/share/dynamic_reconfigure_wrapper/cmake/: dynamic_reconfigure_wrapperConfig.cmake
devel/share/forward_command_controller/cmake/: forward_command_controllerConfig.cmake
devel/share/frc_interfaces/cmake/: frc_interfacesConfig.cmake
devel/share/frc_msgs/cmake/: frc_msgs-msg-extras.cmake  frc_msgs-msg-paths.cmake  frc_msgsConfig.cmake
devel/share/frc_state_controllers/cmake/: frc_state_controllersConfig.cmake
devel/share/frcrobot_description/cmake/: frcrobot_descriptionConfig.cmake
devel/share/frcrobot_gazebo/cmake/: frcrobot_gazeboConfig.cmake
devel/share/imu_sensor_controller/cmake/: imu_sensor_controllerConfig.cmake
devel/share/imu_zero/cmake/: imu_zero-msg-extras.cmake  imu_zero-msg-paths.cmake  imu_zeroConfig.cmake
devel/share/joint_state_controller/cmake/: joint_state_controllerConfig.cmake
devel/share/joint_trajectory_controller/cmake/: joint_trajectory_controllerConfig.cmake
devel/share/navx_offset_controller/cmake/: navx_offset_controller-msg-extras.cmake  navx_offset_controller-msg-paths.cmake  navx_offset_controllerConfig.cmake
devel/share/navx_publisher/cmake/: navx_publisher-msg-extras.cmake  navx_publisher-msg-paths.cmake  navx_publisherConfig.cmake
devel/share/position_controllers/cmake/: position_controllersConfig.cmake
devel/share/realsense2_camera/cmake/: realsense2_camera-msg-extras.cmake  realsense2_camera-msg-paths.cmake  realsense2_cameraConfig.cmake
devel/share/realsense2_description/cmake/: realsense2_descriptionConfig.cmake
devel/share/realtime_tools/cmake/: realtime_toolsConfig.cmake
devel/share/ros_control_boilerplate/cmake/: ros_control_boilerplate-msg-extras.cmake  ros_control_boilerplate-msg-paths.cmake  ros_control_boilerplateConfig.cmake
devel/share/state_handle/cmake/: state_handleConfig.cmake
src/: .rosinstall
src/base_trajectory/: CMakeLists.txt
src/controller_node/: package.xml
src/controller_node/launch/: joysticks_sim.launch
src/navx_publisher/: CMakeLists.txt
src/navx_publisher/src/: navx_publisher.cpp
src/ros_control_boilerplate/: CMakeLists.txt  Phoenix_sim  package.xml
src/ros_control_boilerplate/config/: 2018_offseason_main.yaml
src/ros_control_boilerplate/include/ros_control_boilerplate/: frc_robot_interface.h  frcrobot_hw_interface.h  frcrobot_sim_interface.h
src/ros_control_boilerplate/launch/: 2018_offseason_teleop.launch
src/ros_control_boilerplate/src/: dummy_wpilib_hw.cpp  frc_robot_interface.cpp  frcrobot_hw_interface.cpp  frcrobot_phoenixsim_interface.cpp  frcrobot_sim_interface.cpp
src/teleop_joystick_control/: CMakeLists.txt  package.xml
src/teleop_joystick_control/include/teleop_joystick_control/: teleopJoystickCommands.h
src/teleop_joystick_control/src/: teleopJoystickCommands.cpp  translate_joystick_data.cpp
(+142 files in other folders)
